--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,35 @@ a.text-blue:hover {
   margin-top: 20px;
 }
 
+.blur {
+  filter: blur(8px);
+}
+
+.text-right {
+  text-align: right!important;
+}
+
+input[type="text"], input[type="email"], input[type="password"], input[type="number"], input[type="date"], input[type="time"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="file"], input[type="color"], textarea, select {
+  border: 2px solid #dfdfdf!important;
+  border-radius: 10px;
+  padding: 10px;
+  width: 100%;
+  font-size: 1em;
+  margin-bottom: 10px;
+  line-height: 30px;
+  color: #7b7d80;
+
+}
+
+input:hover, input:focus, input:active {
+  outline-color: #2ab3ff!important;
+  box-shadow: 0 0 5px #2ab3ff!important;
+  border: 2px solid white !important;
+}
+
+.form-label {
+  font-weight: 500;
+}
 
 @media (min-width: 768px) {
   .w-md-75 {
@@ -118,6 +147,9 @@ a.text-blue:hover {
   }
   .w-md-50 {
     width: 50%!important;
+  }
+  .w-md-40 {
+    width: 40%!important;
   }
   .w-md-25 {
     width: 25%!important;
