--- a/src/App.css
+++ b/src/App.css
@@ -169,6 +169,37 @@ input:hover, input:focus, input:active {
   .p-md-1 {
     padding: 0.5rem!important;
   }
+
+  .pl-xl-5 {
+    padding-left: 3rem!important;
+  }
+  .pl-xl-4 {
+    padding-left: 2rem!important;
+  }
+  .pl-xl-3 {
+    padding-left: 1.5rem!important;
+  }
+  .pl-xl-2 {
+    padding-left: 1rem!important;
+  }
+  .pl-xl-1 {
+    padding-left: 0.5rem!important;
+  }
+}
+
+@media (min-width:1400px) {
+  .w-xl-75 {
+    width: 75%!important;
+  }
+  .w-xl-50 {
+    width: 50%!important;
+  }
+  .w-xl-40 {
+    width: 40%!important;
+  }
+  .w-xl-25 {
+    width: 25%!important;
+  }
 }
 
 @keyframes App-logo-spin {
